Fixed price box sizing on mobile

--- a/index.css
+++ b/index.css
@@ -365,7 +365,7 @@ html, body {
    padding-right: 25px;
    padding-bottom: 100px;
    padding-top: 50px;
-   width: 500px;
+   width: 80%;
    height: 200px;
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.5rem;
